--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -48,8 +48,8 @@
    
  <div id="lj-reward" style="display: none">
    <!-- Show Reward screen -->
-     <div class="alert alert-info text-center" role="alert" width: 100vw>
-	  <pre><span id="rewardinfo"></span></pre>
+     <div class="alert alert-primary text-center" role="alert" width: 100vw>
+	  <pre><H1><span id="rewardinfo"></span></H1></pre>
   </div>
  </div>
   
