--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -47,9 +47,11 @@
  </div>
    
  <div id="lj-reward" style="display: none">
-   <!-- Show Reward screen -->
+     <!-- Show Reward screen -->
      <div class="alert alert-primary text-center" role="alert" width: 100vw>
-	  <pre><H1><span id="rewardinfo"></span></H1></pre>
+     <pre><H1><emphasis><span id="rewardinfo"></span></emphasis></H1></pre>
+     <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#rewardinfo">Copy</button></span>
+
   </div>
  </div>
   
