--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -48,8 +48,8 @@
    
  <div id="lj-reward" style="display: none">
      <!-- Show Reward screen -->
-     <div class="alert alert-primary text-center" role="alert" width: 100vw>
-     <pre><H1><emphasis><span id="rewardinfo"></span></emphasis></H1></pre>
+     <div class="alert alert-success text-center" role="alert" width: 100vw>
+     <pre><H1><strong><span id="rewardinfo"></span></strong></H1></pre>
      <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#rewardinfo">Copy</button></span>
 
   </div>
