--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -27,7 +27,7 @@
       <form id="join-game-form">
           <div class="form-game">
               <input type="text" class="form-control" id="gameId" aria-describedby="Game Code">
-              <small class="form-text text-muted">The Geocaching Game ID starts with 'GC'</small>
+              <small class="form-text text-muted">Current player ID# <span id="current-player-id"></span></small>
           </div>
           <button type="submit" class="btn btn-primary" href="#" role="button">Start Game</button>
       </form>
