--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@
 
 <div class="container-fluid">
   <div class="alert alert-info text-center" role="alert" width: 100vw>
-	  <H1> Welcome to the Anti Social Mob Cache </H1>
+	  <H1> Welcome to the Anti Social Mob Cache Hub </H1>
   </div>
 
   <div id="lj-startup">
@@ -27,7 +27,7 @@
       <form id="join-game-form">
           <div class="form-game">
               <input type="text" class="form-control" id="gameId" aria-describedby="Game Code">
-              <small class="form-text text-muted">Current player ID# <span id="current-player-id"></span></small>
+              <small class="form-text text-muted">stay safe</span></small>
           </div>
           <button type="submit" class="btn btn-primary" href="#" role="button">Start Game</button>
       </form>
@@ -56,7 +56,7 @@
  </div>
   
  <div class="alert alert-info text-center" role="alert" width: 100vw>
-    <i>Developed by Pprime` with a hell of a lot of help.  Hosted by Heroku. (c) 2021 All rights reserved.</i>
+    <i>Developed by Pprime` with a hell of a lot of effort.  Hosted by Heroku. (c) 2021 All rights reserved.</i>
  </div>
 </div>
 </body>
