--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -27,7 +27,7 @@
       <form id="join-game-form">
           <div class="form-game">
               <input type="text" class="form-control" id="gameId" aria-describedby="Game Code">
-              <small class="form-text text-muted">stay safe</span></small>
+              <small class="form-text text-muted"><span id="gamedescription"></span></small>
           </div>
           <button type="submit" class="btn btn-primary" href="#" role="button">Start Game</button>
       </form>
