--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -21,11 +21,16 @@
 <body width: 100vw>
 
 <div class="container-fluid">
-  <div class="alert alert-info text-center" role="alert" width: 100vw>
-	  <H1> Congrats </H1>
-  </div>
+  <div class="alert alert-info text-center" role="alert" width: 100vw> <H1> Congratulations </H1> </div>
+  <h1>Game Code: <span id="current-game-id" class="badge badge-secondary"></span>
+      <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#current-game-id">Copy Code</button></span>
+      </h1>
+  <p><b><i><span id="game-description"></i></b></p>
+  <p>This game currently has <span id="current-game-player-count" class="badge badge-info"></span> active players</p>
+  <p>You are located at: <span id="current-Lat" class="badge badge-info"></span>, <span id="current-Lon" class="badge badge-info"></span></p>
+  <pre><span id="displayinfo"></span></pre>
 
- <div id="lj-reward">
+  <div id="lj-reward">
      <!-- Show Reward screen -->
      <div class="alert alert-success text-center" role="alert" width: 100vw>
      <pre><H1><strong><span id="rewardinfo"></span></strong></H1></pre>
