--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@
 
 <div class="container-fluid">
   <div class="alert alert-info text-center" role="alert" width: 100vw>
-	  <H1> Welcome to the Anti Social Mob Cache Hub </H1>
+	  <H1> Welcome to the Anti-Social Cache Hub </H1>
   </div>
 
   <div id="lj-startup">
