--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head width: 100vw>
+<head width: device-width>
   <%- include ("../partials/header.ejs") %>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
   <script> <!-- must be https for Chrome browsers to access current location -->
@@ -33,10 +33,10 @@
   </script>
 </head>
 
-<body width: 100vw>
+<body width: device-width>
 
 <div class="container-fluid">
-  <div class="alert alert-info text-center" role="alert" width: 100vw> <H1> Congratulations </H1> </div>
+  <div class="alert alert-info text-center" role="alert" width: device-width> <H1> Congratulations </H1> </div>
   <h1>Game Code: <span id="current-game-id" class="badge badge-secondary"></span>
       <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#current-game-id">Copy Code</button></span>
       </h1>
@@ -47,13 +47,13 @@
 
   <div id="lj-reward">
      <!-- Show Reward screen -->
-     <div class="alert alert-success text-center" role="alert" width: 100vw>
+     <div class="alert alert-success text-center" role="alert" width: device-width>
      <pre><H1><strong><span id="rewardinfo"></span></strong></H1></pre>
      <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#rewardinfo">Copy</button></span>
   </div>
  </div>
 
- <div class="alert alert-info text-center" role="alert" width: 100vw>
+ <div class="alert alert-info text-center" role="alert" width: device-width>
     <i>Developed by Pprime` with a hell of a lot of effort.  Hosted by Heroku. (c) 2021 All rights reserved.</i>
  </div>
 </div>
