--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head width: 100vw>
+<head width: device-width>
   <%- include ("../partials/header.ejs") %>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
   <script> <!-- must be https for Chrome browsers to access current location -->
@@ -15,10 +15,10 @@
   <script type="text/javascript" src="/js/client.js"></script>
 </head>
 
-<body width: 100vw>
+<body width: device-width>
 
 <div class="container-fluid">
-  <div class="alert alert-info text-center" role="alert" width: 100vw>
+  <div class="alert alert-info text-center" role="alert" width: device-width>
 	  <H1> Welcome to the Anti-Social Cache Hub </H1>
   </div>
 
@@ -46,7 +46,7 @@
 
  </div>
 
- <div class="alert alert-info text-center" role="alert" width: 100vw>
+ <div class="alert alert-info text-center" role="alert" width: device-width>
     <i>Developed by Pprime` with a hell of a lot of effort.  Hosted by Heroku. (c) 2021 All rights reserved.</i>
  </div>
 </div>
