--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -33,7 +33,7 @@
       </form>
   </div>
 
-  <div id="lj-in-game" style="display: none">
+  <div id="lj-in-game" style="display: none" width: device-width>
       <h1>Game Code: <span id="current-game-id" class="badge badge-secondary"></span>
       <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#current-game-id">Copy Code</button></span>
       </h1>
