--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -11,7 +11,7 @@
       window.onload = function() {
         var clipboard = new ClipboardJS('.btn');
         // TODO also send display_udpate table
-        // var display_update = localStorage.getItem('display_update');
+        // var display-update = localStorage.getItem('display_update');
         // var current-game = localStorage.getItem('current-game');
         // var game-description = localStorage.getItem ('game-description);
         // $("#displayinfo").text(display_update);
@@ -23,13 +23,12 @@
         $("#rewardinfo").text(reward_information);
 
         // TODO: Clear the local storage once displayed
-        //   localStorage.setItem('reward_information', null);
-        //   localStorage.setItem('display_update', null);
-        //   localStorage.setItem('current-game', null);
-        //   localStorage.setItem('game-description', null);
+        localStorage.setItem('reward_information', null);
+        localStorage.setItem('display-update', null);
+        localStorage.setItem('current-game', null);
+        localStorage.setItem('game-description', null);
 
       };
-
   </script>
 </head>
 
