--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -10,24 +10,16 @@
   <script>
       window.onload = function() {
         var clipboard = new ClipboardJS('.btn');
-        // TODO also send display_udpate table
-        // var display-update = localStorage.getItem('display_update');
-        // var current-game = localStorage.getItem('current-game');
-        // var game-description = localStorage.getItem ('game-description);
-        // $("#displayinfo").text(display_update);
-        // $("#current-game-id").text(current-game);
-        // $("game-description").text(game-description);
-
-
+        <!-- Obtain screen data from localstorage and then clear the local storage out -->
+        var display-update = localStorage.getItem('display_update');
+        $("#displayinfo").text(display-update);
+        var current-game = localStorage.getItem('current-game');
+        $("#current-game-id").text(current-game);
+        var game-description = localStorage.getItem ('game-description);
+        $("game-description").text(game-description);
         var reward_information = localStorage.getItem('reward_information');
         $("#rewardinfo").text(reward_information);
-
-        // TODO: Clear the local storage once displayed
-        localStorage.setItem('reward_information', null);
-        localStorage.setItem('display-update', null);
-        localStorage.setItem('current-game', null);
-        localStorage.setItem('game-description', null);
-
+        localStorage.clear(); // once the volatile memory variables are set, empty it
       };
   </script>
 </head>
@@ -40,12 +32,12 @@
       <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#current-game-id">Copy Code</button></span>
       </h1>
   <p><b><i><span id="game-description"></i></b></p>
-  // <p>This game currently has <span id="current-game-player-count" class="badge badge-info"></span> active players</p>
-  // <p>You are located at: <span id="current-Lat" class="badge badge-info"></span>, <span id="current-Lon" class="badge badge-info"></span></p>
+  <-- <p>This game currently has <span id="current-game-player-count" class="badge badge-info"></span> active players</p> -->
+  <-- <p>You are located at: <span id="current-Lat" class="badge badge-info"></span>, <span id="current-Lon" class="badge badge-info"></span></p> -->
   <pre><span id="displayinfo"></span></pre>
 
   <div id="lj-reward">
-     <!-- Show Reward screen -->
+     <!-- Show Reward information -->
      <div class="alert alert-success text-center" role="alert" width: device-width>
      <pre><H1><strong><span id="rewardinfo"></span></strong></H1></pre>
      <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#rewardinfo">Copy</button></span>
