--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -48,7 +48,7 @@
  </div>
 </div>
 <script>
-    localStorage.clear(); <!-- once the volatile memory variables are set, empty it --> 
+   <!-- localStorage.clear();  once the volatile memory variables are set, empty it --> 
 </script>
 </body>
 </html>
