--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -34,7 +34,7 @@
     <pre><span id="displayinfo"></span></pre>
     
     <!-- Show Reward information -->
-    <div class="alert alert-success text-center" role="alert" width: device-width>
+    <div class="alert alert-success text-center" role="alert">
     <pre><H1><strong><span id="rewardinfo"></span></strong></H1></pre>
     <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#rewardinfo">Copy</button></span>
   </div>
