--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -22,7 +22,7 @@
 	  <H1> Welcome to the Anti-Social Cache Hub </H1>
   </div>
 
-  <div id="lj-startup">
+  <div id="lj-startup" width: device-width>
       <h1 class="display-7">Enter the Geocaching ID Code for the game you wish to play:</h1>
       <form id="join-game-form">
           <div class="form-game">
@@ -42,7 +42,7 @@
       <p>You are located at: <span id="current-Lat" class="badge badge-info"></span>, <span id="current-Lon" class="badge badge-info"></span></p>
 
       <!-- Show all Players and Waypoints, target and current distance from each. Highlight a waypoint if "occupied"       -->
-      <pre><span id="displayinfo"></span></pre>
+      <pre><span id="displayinfo" width: device-width></span></pre>
 
  </div>
 
