--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -8,21 +8,24 @@
     location.replace(`https:${location.href.substring(location.protocol.length)}`);
   } </script>
   <script>
-      window.onload = function() {
+     window.onload = function() {
         var clipboard = new ClipboardJS('.btn');
 
         var reward_information = localStorage.getItem('reward_information');
         $("#rewardinfo").text(reward_information);
-      };
+     };
   </script>
-</head>
-<!--         var display-update = localStorage.getItem('display_update');
+  <!-- Can we include these somehow as well?
+        var display-update = localStorage.getItem('display_update');
         $("#displayinfo").text(display-update);
         var current-game = localStorage.getItem('current-game');
         $("#current-game-id").text(current-game);
         var game-description = localStorage.getItem ('game-description);
         $("game-description").text(game-description);
  -->
+
+</head>
+
 <body width: device-width>
 <div class="container-fluid">
   <div class="alert alert-success text-center" role="alert" width: device-width> <H1> Congratulations! </H1> </div>
@@ -46,7 +49,7 @@
  </div>
 </div>
 <script>
-   <!-- localStorage. clear();  once the volatile memory variables are set, empty it --> 
-</script>
+   localStorage.clear();
+</script>   <!-- once the volatile memory variables are set, empty it --> 
 </body>
 </html>
