--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,39 +16,36 @@
 </head>
 
 <body width: device-width>
+<div class="alert alert-info text-center" role="alert" width: device-width>
+	<H1> Welcome to the Anti-Social Cache Hub </H1>
+</div>
 
-<div class="container-fluid">
-  <div class="alert alert-info text-center" role="alert" width: device-width>
-	  <H1> Welcome to the Anti-Social Cache Hub </H1>
-  </div>
+<div id="lj-startup" width: device-width>
+	<h1 class="display-7">Enter the Geocaching ID Code for the game you wish to play:</h1>
+	<form id="join-game-form">
+            <div class="form-game">
+               <input type="text" class="form-control" id="gameId" aria-describedby="Game Code">
+               <small class="form-text text-muted"><span id="game-description"></span></small>
+            </div>
+            <button type="submit" class="btn btn-primary" href="#" role="button">Start Game</button>
+        </form>
+</div>
 
-  <div id="lj-startup" width: device-width>
-      <h1 class="display-7">Enter the Geocaching ID Code for the game you wish to play:</h1>
-      <form id="join-game-form">
-          <div class="form-game">
-              <input type="text" class="form-control" id="gameId" aria-describedby="Game Code">
-              <small class="form-text text-muted"><span id="game-description"></span></small>
-          </div>
-          <button type="submit" class="btn btn-primary" href="#" role="button">Start Game</button>
-      </form>
-  </div>
-
-  <div id="lj-in-game" style="display: none" width: device-width>
+<div id="lj-in-game" style="display: none" width: device-width>
       <h1>Game Code: <span id="current-game-id" class="badge badge-secondary"></span>
       <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#current-game-id">Copy Code</button></span>
       </h1>
-      <p><small><span id="game-description" class="badge badge-info"></span></small></p>
+      <small class="badge badge-info"><span id="game-description"></span></small>
       <p>This game currently has <span id="current-game-player-count" class="badge badge-info"></span> active players</p>
       <p>You are located at: <span id="current-Lat" class="badge badge-info"></span>, <span id="current-Lon" class="badge badge-info"></span></p>
 
       <!-- Show all Players and Waypoints, target and current distance from each. Highlight a waypoint if "occupied"       -->
       <pre><span id="displayinfo" width: device-width></span></pre>
 
- </div>
+</div>
 
- <div class="alert alert-info text-center" role="alert" width: device-width>
+<div class="alert alert-info text-center" role="alert" width: device-width>
     <i>Developed by Pprime` with a hell of a lot of effort.  Hosted by Heroku. (c) 2021 All rights reserved.</i>
- </div>
 </div>
 </body>
 </html>
