--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -35,7 +35,7 @@
       <h1>Game Code: <span id="current-game-id" class="badge badge-secondary"></span>
       <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#current-game-id">Copy Code</button></span>
       </h1>
-      <small class="badge badge-info"><span id="game-description"></span></small>
+      <small class="badge badge-light"><span id="game-description"></span></small>
       <p>This game currently has <span id="current-game-player-count" class="badge badge-info"></span> active players</p>
       <p>You are located at: <span id="current-Lat" class="badge badge-info"></span>, <span id="current-Lon" class="badge badge-info"></span></p>
 
