--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -55,6 +55,7 @@
  <!-- once the volatile memory variables are set, empty it
 <script>
    localStorage.clear();
+   console.log("localstorage cleared");
 </script>  --> 
 </body>
 </html>
