--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -17,14 +17,12 @@
   </script>
   var display-update = localStorage.getItem('display_update');
   $("#displayinfo").text(display_update);
+  var game_description = localStorage.getItem ('game_description);
+  $("gamedesc").text(game_description);
 
   <!-- Can we include these somehow as well?
-        var display-update = localStorage.getItem('display_update');
-        $("#displayinfo").text(display-update);
         var current-game = localStorage.getItem('current-game');
         $("#current-game-id").text(current-game);
-        var game-description = localStorage.getItem ('game-description);
-        $("game-description").text(game-description);
  -->
 
 </head>
@@ -37,7 +35,7 @@
     <h1>Game Code: <span id="current-game-id" class="badge badge-secondary"></span>
     <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#current-game-id">Copy Code</button></span>
     </h1>
-    <p><small><span id="game-description" class="badge badge-info"></span></small></p>
+    <p><small><span id="gamedesc" class="badge badge-info"></span></small></p>
     <pre><span id="displayinfo"></span></pre>
     
     <!-- Show the Reward information -->
