--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -17,7 +17,7 @@
   </script>
   var display-update = localStorage.getItem('display_update');
   $("#displayinfo").text(display_update);
-  var game_description = localStorage.getItem ('game_description);
+  var game_description = localStorage.getItem ('game_description');
   $("#gamedesc").text(game_description);
 
   <!-- Can we include these somehow as well?
