--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -10,6 +10,8 @@
   <script>
      window.onload = function() {
         var clipboard = new ClipboardJS('.btn');
+     };
+     
         var reward_information = localStorage.getItem('reward_information');
         $("#rewardinfo").text(reward_information);
         var display-update = localStorage.getItem('display_update');
@@ -18,12 +20,13 @@
         $("#gamedesc").text(game_description);
         var current-game = localStorage.getItem('current-game');
         $("#current-game-id").text(current-game);
-     };
+     
   </script>
 </head>
 
 <body width: device-width>
-<div class="container-fluid">
+<!-- <div class="container-fluid"> -->
+<div>
   <div class="alert alert-success text-center" role="alert" width: device-width> <H1> Congratulations! </H1> </div>
   <div id="lj-reward">
     <!-- Show Game information -->
