--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -15,10 +15,10 @@
         $("#rewardinfo").text(reward_information);
         var display_update = localStorage.getItem('display_update');
         $("#displayinfo").text(display_update);
-        var game_description = localStorage.getItem ('game_description');
+        var game_description = localStorage.getItem('game_description');
         $("#gamedesc").text(game_description);
-        var current-game = localStorage.getItem('current-game');
-        $("#current-game-id").text(current-game);   
+        var current_game = localStorage.getItem('current_game');
+        $("#current-game-id").text(current_game);   
   </script>
 </head>
 
