--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -18,37 +18,30 @@
         $("#gamedesc").text(game_description);
         var current_game = localStorage.getItem('current_game');
         $("#current-game-id").text(current_game);   
-  };
+        localStorage.clear();
+      };
   </script>
 </head>
 
 <body width: device-width>
-<div class="container-fluid">
   <div class="alert alert-success text-center" role="alert" width: device-width> <H1> Congratulations! </H1> </div>
-  <div id="lj-reward">
+  <div id="lj-reward" width: device-width>
     <!-- Show Game information -->
     <h1>Game Code: <span id="current-game-id" class="badge badge-secondary"></span>
     <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#current-game-id">Copy Code</button></span>
     </h1>
     <p><small><span id="gamedesc" class="badge badge-info"></span></small></p>
     <pre><span id="displayinfo"></span></pre>
-    
+  </div>
+  
+  <div class="alert alert-success text-center" role="alert">
     <!-- Show the Reward information -->
-    <div class="alert alert-success text-center" role="alert">
     <pre><H1><strong><span id="rewardinfo"></span></strong></H1></pre>
     <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#rewardinfo">Copy</button></span>
   </div>
- </div>
-
- <div class="alert alert-info text-center" role="alert" width: device-width>
+ 
+  <div class="alert alert-info text-center" role="alert" width: device-width>
     <i>Developed by Pprime` with a hell of a lot of effort.  Hosted by Heroku. (c) 2021 All rights reserved.</i>
- </div>
-</div>
-
- <!-- once the volatile memory variables are set, empty it
-<script>
-   localStorage.clear();
-   console.log("localstorage cleared");
-</script>  --> 
+  </div>
 </body>
 </html>
