--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -31,7 +31,7 @@
     <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#current-game-id">Copy Code</button></span>
     </h1>
     <p><small><span id="gamedesc" class="badge badge-info"></span></small></p>
-    <pre><span id="displayinfo"></span></pre>
+    <p><span id="displayinfo"></span></p>
   </div>
   
   <div class="alert alert-success text-center" role="alert">
