--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -18,10 +18,10 @@
         $("#gamedesc").text(game_description);
         var current_game = localStorage.getItem('current_game');
         $("#current-game-id").text(current_game);   
-        var my-lat = localStorage.getItem('my_lat');
-        $("#Current-Lat").text(my-lat);   
-        var my-lon = localStorage.getItem('my_lon');
-        $("#Current-Lon").text(my-lon);   
+        var mylat = localStorage.getItem('my_lat');
+        $("#current-Lat").text(mylat);   
+        var mylon = localStorage.getItem('my_lon');
+        $("#current-Lon").text(mylon);   
         localStorage.clear();
       };
   </script>
