--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -25,7 +25,7 @@
 	<form id="join-game-form">
             <div class="form-game">
                <input type="text" class="form-control" id="gameId" aria-describedby="Game Code">
-               <small class="form-text text-muted"><span id="game-description"></span></small> <!-- this DOES display on error repeat -->
+               <small class="form-text text-muted"><span id="game-error"></span></small> <!-- display an error if retrying -->
             </div>
             <button type="submit" class="btn btn-primary" href="#" role="button">Start Game</button>
         </form>
