--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -24,7 +24,7 @@
 	<h1 class="display-7">Enter the Geocaching ID Code for the game you wish to play:</h1>
 	<form id="join-game-form">
             <div class="form-game">
-               <input type="text" class="form-control" id="gameId" aria-describedby="Game Code" value = $("#URLentry")>
+               <input type="text" class="form-control" id="gameId" aria-describedby="Game Code" value = "{% URLentry %}">
                <small class="form-text text-muted"><span id="game-error"></span></small> <!-- display an error if retrying -->
             </div>
             <button type="submit" class="btn btn-primary" href="#" role="button">Start Game</button>
