--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -22,14 +22,17 @@
 
 <div id="lj-startup" width: device-width>
 	<h1 class="display-7">Enter the Geocaching ID Code for the game you wish to play:</h1>
+	
+	<pre><span id="FORMentry" width:100></span></pre>
+	<!--
 	<form id="join-game-form">
-            <div class="form-game">
-	      <!-- <pre><span id="URLentry" width:100></span></pre> -->
+            <div class="form-game">    
               <input type='text' class='form-control' id='gameId' aria-describedby='Game Code' value = ''> 
               <small class="form-text text-muted"><span id="game-error"></span></small> <!-- display an error if retrying -->
             </div>
             <button type="submit" class="btn btn-primary" href="#" role="button">Start Game</button>
         </form>
+	-->
 </div>
 
 <div id="lj-in-game" style="display: none" width: device-width>
