--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,7 +23,7 @@
 <div id="lj-startup" width: device-width>
 	<h1 class="display-7">Enter the Geocaching ID Code for the game you wish to play:</h1>
 	
-	<pre><span id="FORMentry" width:100></span></pre>
+	<div id="FORMentry"></div>
 	<!--
 	<form id="join-game-form">
             <div class="form-game">    
