--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,16 +23,15 @@
 <div id="lj-startup" width: device-width>
 	<h1 class="display-7">Enter the Geocaching ID Code for the game you wish to play:</h1>
 	
-	<div id="FORMentry"></div>
-	<!--
-	<form id="join-game-form">
-            <div class="form-game">    
-              <input type='text' class='form-control' id='gameId' aria-describedby='Game Code' value = ''> 
-              <small class="form-text text-muted"><span id="game-error"></span></small>
+	<!-- <div id="FORMentry"></div> -->
+	
+	<form id='join-game-form'>
+            <div class='form-game'>    
+              <input type='text' class='form-control' id='gameId' aria-describedby='Game Code' value = `${ URLentry }`> 
+              <small class='form-text text-muted'><span id='game-error'></span></small>
             </div>
-            <button type="submit" class="btn btn-primary" href="#" role="button">Start Game</button>
+            <button type='submit' class='btn btn-primary' href='#' role='button'>Start Game</button>
         </form>
-	-->
 </div>
 
 <div id="lj-in-game" style="display: none" width: device-width>
