--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,16 +21,13 @@
 </div>
 
 <div id="lj-startup" width: device-width>
-	<h1 class="display-7">Enter the Geocaching ID Code for the game you wish to play:</h1>
-	
-	<!-- <div id="FORMentry"></div> -->
-	
-	<form id='join-game-form'>
-            <div class='form-game'>    
-              <input type='text' class='form-control' id='gameId' aria-describedby='Game Code'>
-              <small class='form-text text-muted'><span id='game-error'></span></small>
+	<h1 class="display-7">Enter the Geocaching ID Code for the game you wish to play:</h1>	
+	<form id="join-game-form">
+            <div class="form-game">    
+              <input type="text" class="form-control" id="gameId" aria-describedby="Game Code">
+              <small class="form-text text-muted"><span id="game-error"></span></small>
             </div>
-            <button type='submit' class='btn btn-primary' href='#' role='button'>Start Game</button>
+            <button type="submit" class="btn btn-primary" href="#" role="button">Start Game</button>
         </form>
 </div>
 
