--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,7 +20,7 @@
 	<H1> Welcome to the Anti-Social Cache Hub </H1>
 </div>
 
-<div id="lj-startup" width: device-width>
+<div id="lj-startup" style="display: none" width: device-width>
 	<h1 class="display-7">Enter the Geocaching ID Code for the game you wish to play:</h1>	
 	<form id="join-game-form">
             <div class="form-game">    
