--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,7 +23,7 @@
 <div id="lj-startup" style="display: none" width: device-width>
 	<h1 class="display-7">Enter the Geocaching ID Code for the game you wish to play:</h1>	
 	<form id="join-game-form">
-            <div class="form-game">    
+            <div class="form-game" width:100>    
               <input type="text" class="form-control" id="gameId" aria-describedby="Game Code">
               <small class="form-text text-muted"><span id="game-error"></span></small>
             </div>
