--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -37,7 +37,7 @@
       </h1>
       <p><span id="gamedesc" class="badge badge-info"></span></p>
       <p>This game currently has <span id="current-game-player-count" class="badge badge-info"></span> active players</p>
-      <p>You are located at: <span id="current-Lat" class="badge badge-info"></span>, <span id="current-Lon" class="badge badge-info"></span></p>
+      <p>You are located at: <span id="current-Lat" class="badge badge-info"></span>, <span id="current-Lon" class="badge badge-info">, +/-<span id="current-Acc" class = badge-info">m.</span></p>
 
       <!-- Show all Players and Waypoints, target and current distance from each. Highlight a waypoint if "occupied"       -->
       <pre><span id="displayinfo" width: device-width></span></pre>
