--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -42,6 +42,10 @@
       <!-- Show all Players and Waypoints, target and current distance from each. Highlight a waypoint if "occupied"       -->
       <pre><span id="displayinfo" width: device-width></span></pre>
 
+      <!-- display map -->
+      <div id="map"></div>
+      <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+      <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=&v=weekly" async></script>
 </div>
 
 <div class="alert alert-info text-center" role="alert" width: device-width>
