--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
-<!--    #mapid { height: 180px; } -->
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin="">
@@ -51,11 +50,11 @@
       <pre><span id="displayinfo" width: device-width></span></pre>
 
       <!-- display map -->
-      <div id="mapid"></div>
+     MAP: 
+     <div id="mapid" width: device-width></div>
 </div>
 
 <script>
-
 	var mymap = L.map('mapid').setView([51.505, -0.09], 13);
 
 	L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
@@ -66,7 +65,6 @@
 		tileSize: 512,
 		zoomOffset: -1
 	}).addTo(mymap);
-
 </script>
 
 
