--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -51,7 +51,7 @@
 
       <!-- display map -->
      MAP: 
-     <div id="mapid" width: device-width></div>
+     <div id="mapid" width: 480></div>
 </div>
 
 <script>
