--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -52,7 +52,7 @@
       <!-- Show all Players and Waypoints, target and current distance from each. Highlight a waypoint if "occupied"       -->
       <pre><span id="displayinfo" width: device-width></span></pre>
 
-      <div id="mapid" width: device-width></div>       <!-- display map -->
+      <div id="mapid" width: 50%></div>       <!-- display map -->
 </div>
 
 <!-- TODO - display a map centred on the current player's geolocation, with usual controls in place for zoom/pan etc. Update the map as the player moves
